Final working version of Flatbook DOM lab - all tests passing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
       <div class="list">
-        <ul id="book-list">
+        <ul id="book-list"></ul>
           <li id = "delete-this">
             <h3>Example Title</h3>
             <p>Example Author</p>
